--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   yandex_mapkit: ^4.1.0
   animated_splash_screen: ^1.3.0
   lottie: ^3.3.1
+  geocoding: ^3.0.0
+  sqflite: ^2.4.1
 
 dev_dependencies:
   flutter_launcher_icons: ^0.14.3
@@ -75,6 +77,8 @@ flutter:
     - assets/Avatar.png
     - assets/Pin_current_location.png
     - assets/Animation-1739066636266.json
+    - assets/start_marker.png
+    - assets/end_marker.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
